--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,10 @@ coverage
 /cypress/screenshots/
 
 # Editor directories and files
+.vscode
 .vscode/*
-!.vscode/extensions.json
+.VSCodeCounter
+.VSCodeCounter/*
 .idea
 *.suo
 *.ntvs*
