fix(base url): Add new base url to env)

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_API_BASEURL="https://api.shvz.ir/api"
+VITE_API_BASEURL2="https://api.shvz.ir/"
 
 # WS Config
 VITE_APP_WEBSOCKETS_KEY="myKey"
