fix(cargo):add print pages

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VITE_API_BASEURL="https://api.shvz.ir/api"
 VITE_API_BASEURL2="https://api.shvz.ir/"
+VITE_API_SITEURL="http://localhost:5173/"
 
 # WS Config
 VITE_APP_WEBSOCKETS_KEY="myKey"
