--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VITE_API_BASEURL="https://api.shvz.ir/api"
 VITE_API_BASEURL2="https://api.shvz.ir/"
-VITE_API_SITEURL="http://localhost:5173/"
+VITE_API_SITEURL="https://backoffice.shvz.ir/"
 
 # WS Config
 VITE_APP_WEBSOCKETS_KEY="myKey"
