--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "qs": "^6.11.2",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
+    "swiper": "^11.0.5",
     "vue": "^3.3.4",
     "vue-chart-3": "^3.1.8",
     "vue-debounce": "^4.0.0",
