--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 VITE_API_BASEURL="https://api.shvz.ir/api"
 VITE_API_BASEURL2="https://api.shvz.ir/"
 VITE_API_SITEURL="http://localhost:5173/"
+VITE_API_BACKEND_URL="https://shavaz.com/"
 
 # WS Config
 VITE_APP_WEBSOCKETS_KEY="myKey"
