--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ deploy:
         # Add index.php to the list if you are using PHP
         index index.html index.php index.htm index.nginx-debian.html;
         location / {
-         try_files $uri $uri/ /index.html;
+         try_files \$uri \$uri/ /index.html;
         }
       
           #listen 443 ssl; # managed by Certbot
