--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,9 +58,9 @@ deploy:
         }
       
           #listen 443 ssl; # managed by Certbot
-          #ssl_certificate /etc/letsencrypt/live/seller.shvz.ir/fullchain.pem; # managed by Certbot
-          #ssl_certificate_key /etc/letsencrypt/live/seller.shvz.ir/privkey.pem; # managed by Certbot
-          #include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+          ssl_certificate /etc/letsencrypt/live/$NGINX_FILE_NAME.shvz.ir/fullchain.pem; # managed by Certbot
+          ssl_certificate_key /etc/letsencrypt/live/$NGINX_FILE_NAME.shvz.ir/privkey.pem; # managed by Certbot
+          include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
           ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
       
       }
