Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,7 @@ deploy:
          try_files \$uri \$uri/ /index.html;
         }
       
-          #listen 443 ssl; # managed by Certbot
+          listen 443 ssl; # managed by Certbot
           ssl_certificate /etc/letsencrypt/live/$NGINX_FILE_NAME.shvz.ir/fullchain.pem; # managed by Certbot
           ssl_certificate_key /etc/letsencrypt/live/$NGINX_FILE_NAME.shvz.ir/privkey.pem; # managed by Certbot
           include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
