--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vue3-persian-datetime-picker": "^1.2.2",
     "vue3-text-clamp": "^0.1.2",
     "vuetify": "^3.5.17",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vue-tinymce-editor": "^1.6.2"
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
